Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5560

[C++][Plasma] Cannot create Plasma object after OutOfMemory error

    XMLWordPrintableJSON

Details

    Description

      If the client tries to call `CreateObject` and there is not enough memory left in the object store to create it, an `OutOfMemory` error will be returned. However, the plasma store also creates an entry for the object, even though it failed to be created. This means that later on, if the client tries to create the object again, it will receive an error that the object already exists. Also, if the client tries to get the object, it will hang because the entry appears to be unsealed.

      We should fix this by only creating the object entry if the `CreateObject` operation succeeds.

      Attachments

        Issue Links

          Activity

            People

              richardliaw Richard Liaw
              swangster Stephanie Wang
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 10m
                  2h 10m