ARROW-5560: [C++][Plasma] Cannot create Plasma object after OutOfMemory error

If the client tries to call `CreateObject` and there is not enough memory left in the object store to create it, an `OutOfMemory` error will be returned.

However, the plasma store also creates an entry for the object, even though it failed to be created. This means that later on, if the client tries to create the object again, it will receive an error that the object already exists. Also, if the client tries to get the object, it will hang because the entry appears to be unsealed.

We fix this by only creating the object entry if the `CreateObject` operation succeeds.

Author: Richard Liaw <rliaw@berkeley.edu>
Author: Philipp Moritz <pcmoritz@gmail.com>

Closes #4850 from richardliaw/fix_all_plasma_bugs_once_and_for_all and squashes the following commits:

82c4701ca <Philipp Moritz> Update test_plasma.py
5ac61b8f3 <Richard Liaw> updatetest
c6b97b345 <Richard Liaw> Merge branch 'fix_all_plasma_bugs_once_and_for_all' of https://github.com/richardliaw/arrow into fix_all_plasma_bugs_once_and_for_all
475d12d5c <Richard Liaw> fix up tests
f5b892ff0 <Richard Liaw> Update cpp/src/plasma/store.cc
ff1c826c4 <Richard Liaw> store fix